--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_CLIENT_ID=Ov23liWwJ99v6Qvpno15
 GITHUB_CLIENT_SECRET=8c558715e69932786b37aba1b2cfd0b3c5459a9d
 
 CLIENT_BASE_URL=http://localhost:3000
+
+PORT=5000
